# Zeru

./: .gitattributes  .gitignore  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ci.yml  release.yml
docs/: DESIGN_MEMORY.md
examples/: arrays.zr  benchmark.sh  benchmark_memory.py  check_examples.py  enum_match.zr  generate_benchmark.py  generics.zr  imports.zr  imports_direct.zr  inline_asm.zr  io_operations.zr  io_operatios.zr  loop-conditional.zr  move_semantics.zr  multiple-fn.zr  mut_params.zr  optional_test.zr  pointers.zr  raw_strings.zr  right-shift-unsigned.zr  structs.zr  syntax.cpp  syntax.go  syntax.rs  syntax.zr  syntax_ref.zr  tuples.zr  vec_test.zr
src/: ast.rs  errors.rs  lexer.rs  main.rs  parser.rs  token.rs
src/codegen/: compiler.rs  mod.rs  tests.rs
src/sema/: analyzer.rs  mod.rs  symbol_table.rs  tests.rs  types.rs
std/: builtin.zr  math.zr
tree-sitter-zeru/: NEOVIM.md  README.md  package.json
